<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="com.admiral.uikit.layout.ConstraintLayout">

    <com.admiral.uikit.components.text.TextView
        android:id="@+id/calendarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/module_x4"
        android:layout_marginTop="@dimen/module_x2"
        android:clickable="true"
        android:drawablePadding="@dimen/module_x1"
        android:focusable="true"
        app:admiralCompoundDrawablesNormalEnabledPalette="elementAccent"
        app:admiralCompoundDrawablesPressedPalette="elementAccentPressed"
        app:admiralTextColorNormalEnabledPalette="elementAccent"
        app:admiralTextColorPressedPalette="elementAccentPressed"
        app:admiralTextStyle="subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:drawableEnd="@drawable/admiral_ic_chevron_down_outline"
        tools:text="Январь 2021" />

    <com.admiral.uikit.components.text.TextView
        android:id="@+id/select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/module_x2"
        android:layout_marginEnd="@dimen/module_x4"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/calendar_select_by_date_picker"
        android:visibility="gone"
        app:admiralTextColorNormalEnabledPalette="elementAccent"
        app:admiralTextColorPressedPalette="elementAccentPressed"
        app:admiralTextStyle="subtitle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="0.5"
        tools:visibility="visible" />

    <com.admiral.uikit.components.imageview.ImageView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/module_x2"
        android:layout_marginEnd="@dimen/module_x4"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/admiral_ic_chevron_left_outline"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintTop_toTopOf="parent" />

    <com.admiral.uikit.components.imageview.ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/module_x2"
        android:layout_marginEnd="@dimen/module_x4"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/admiral_ic_chevron_right_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.admiral.uikit.components.calendar.week.WeekDaysView
        android:id="@+id/weekDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/module_x4"
        android:layout_marginTop="@dimen/module_x3"
        android:layout_marginEnd="@dimen/module_x4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/monthsRecycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/admiral_calendar_month_max_height"
        android:layout_marginTop="@dimen/module_x4"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekDays"
        tools:itemCount="1"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/admiral_item_horizontal_calendar" />

    <com.admiral.uikit.components.datepicker.DatePicker
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/monthsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weekDays"
        tools:visibility="visible" />

</merge>