<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Months -->
    <string name="month_january">Январь</string>
    <string name="month_february">Февраль</string>
    <string name="month_march">Март</string>
    <string name="month_april">Апрель</string>
    <string name="month_may">Май</string>
    <string name="month_june">Июнь</string>
    <string name="month_july">Июль</string>
    <string name="month_august">Август</string>
...
